# opencv-face-detection-cpp

./: .gitignore  README.md
opencv-face-detection-cpp/: CMakeLists.txt
opencv-face-detection-cpp/include/: FaceDetection.h
opencv-face-detection-cpp/src/: FaceDetection.cpp  main.cpp
